data/all_generated_tests/raw_wast_tests/loop_UnreachableCodeExecution_377.wast
;; 8. **Loop with Unreachable After Invalid Block Type**:    - Design a loop specifying an invalid block type, expected to branch to an `unreachable` instruction upon failure.    - **Constraint**: Ensures valid block type parsing and checking.    - **Relation to Unreachable Code Execution**: Incorrect block type should lead to executing `unreachable`.

(assert_invalid
  (module (func $unreachable-after-invalid-block
    (loop (type 0) (unreachable))
  ))
  "type mismatch"
)